Clarify Byte-Pair Encoding explanation in seminar.ipynb by updating the description of how Python strings are processed, emphasizing the matching of token pairs to vocabulary.

--- a/week1_tokenizer/seminar.ipynb
+++ b/week1_tokenizer/seminar.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "Let's skip the old word or rule-based methods and jump straight into Byte-Pair Encoding (BPE). We'll skip for now how it's trained and focus on the inference.\n",
     "\n",
-    "BPE has a vocabulary that matches a sequence of **bytes** to a token ID. So, when you have a Python string, it (more or less) just does `s.encode(\"utf-8\")` and then tries to greedily match the bytes to the longest possible tokens.\n",
+    "BPE has a vocabulary that matches a sequence of **bytes** to a token ID. So, when you have a Python string, it (more or less) just does `s.encode(\"utf-8\")` and then tries to greedily match pairs of tokens to the ones that exist in the vocabulary.\n",
     "\n",
     "Let's implement it. First, we need to have a way to store these tokens. The problem is that if we want to store a token `\\t`, if you just call `print(token)`, the result will be invisible. Even worse, some of the bytes are weird unprintable control characters if you just assume they are unicode symbols. So, the first step, wee need to match bytes (practically numbers from 0 to 255) to some nice printable characters.\n",
     "\n",
